<resources>
    <string name="app_name">UniApp</string>
    <string-array name="arrayAttivit">
        <item>Attività 1</item>
        <item>Attività 2</item>
        <item>Attività 3</item>
        <item>Nome generico</item>
        <item>Nome generico</item>
        <item>Nome generico</item>
    </string-array>
    <string-array name="scadenze">
        <item>19/04/20</item>
        <item>23/04/20</item>
        <item>01/05/20</item>
        <item>01/01/21</item>
        <item>01/01/21</item>
        <item>01/01/21</item>
    </string-array>
    <string-array name="descrizioni">
        <item>Descrizione 1</item>
        <item>Descrizione 2</item>
        <item>Descrizione 3</item>
        <item>Descrizione generica</item>
        <item>Descrizione generica</item>
        <item>Descrizione genericaDescrizione xgenericaDescrizione agenericaDescrizione bgenericaDescrizione cgenericaDescrizione dgenericaDescrizione geneericaDescrizione generficaDescrizione generica
        Descrizione genericaDescrizqione genericaDescriazione generficaDescrizione genericaDsdescrizione genericaDesfcrizione genericaDescrizione generica</item>

    </string-array>
    <integer-array name="priorita">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </integer-array>
    //Stringhe corsi
    <string name="numero_CFU">CFU: </string>
    <string name="nome_professore">Professore: </string>
    <string name="email_professore">Email: </string>
    <string name="appunti">Appunti</string>
    <string name="descrizione_immagine">Immagine generica</string>

    //Stringhe To do
    <string name="nome_attivita">Nome attività</string>
    <string name="descrizione_attivita">Descrizione</string>
    <string name="priorita_attivita">Priorità</string>
    <string name="scadenza_attivita">Scadenza</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="bassa">Bassa</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>
    <string name="inserimentoAttivita">Inserimento Attività</string>


    <string-array name="Giorni">
        <item> Lunedì </item>
        <item> Martedì </item>
        <item> Mercoledì </item>
        <item> Giovedì </item>
        <item> Venerdì </item>
        <item> Sabato </item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chiudi">chiudi</string>
    <string name="indietro">Indietro</string>
    <string name="conferma">CONFERMA</string>

    //Privacy
    <string name="privacy1">- I tuoi dati vengono salvati in un database privato (fornito da Firebase Firestore) a cui nessun utente di terze parti può accedere.</string>
    <string name="privacy2">- Inoltre i tuoi dati non vengono utilizzati o elaborati in alcun modo, sono utilizzati per essere facilmente accessibili dai nostri utenti!</string>


    //FAQ
    <string name="faq1">- I miei dati sono al sicuro?\n\nAssolutamente sì, puoi visitare la sezione privacy per maggiori informazioni.</string>
    <string name="faq2">- Cosa faccio se dimentico la password?\n\nPuoi resettarla senza perdere i dati salvati sul tuo account</string>
    <string name="faq3">- Posso disinstallare l\'applicazione e cambiare dispositivo senza perdere i dati?\n\nSì, i dati non vengono persi quando l\'app viene disinstallata;\ndovrai solo effettuare il login!</string>

</resources>
