<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/dialogToDoNome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="11dp"
        android:hint="@string/nome_attivita"
        android:text=""
        android:inputType="text"/>

    <EditText
        android:id="@+id/dialogToDoDescrizione"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoScadenza"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:hint="@string/descrizione_attivita"
        android:text="" />

    <EditText
        android:id="@+id/dialogToDoScadenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoPrioritaGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:hint="@string/scadenza_attivita"
        android:inputType="date"
        android:text="" />

    <ImageButton
        android:id="@+id/dialogToDoChiudi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/chiudi"/>

    <Button
        android:id="@+id/dialogToDoButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoDescrizione"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp"
        android:text="@string/aggiungi" />

    <RadioGroup
        android:id="@+id/dialogToDoPrioritaGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoNome"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp">

        <RadioButton
            android:id="@+id/bassaPriorita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bassa"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/mediaPrioria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media" />

        <RadioButton
            android:id="@+id/altaPriorita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alta" />
    </RadioGroup>

</RelativeLayout>