<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogToDoNome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="11dp"
        android:hint="@string/nome_attivita"
        android:text="" />

    <TextView
        android:id="@+id/dialogToDoDescrizione"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoPriorita"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:hint="@string/descrizione_attivita"
        android:text="" />

    <TextView
        android:id="@+id/dialogToDoPriorita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoScadenza"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:hint="@string/priorita_attivita"
        android:text=""

        />
    <TextView
        android:id="@+id/dialogToDoScadenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToDoNome"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:hint="@string/scadenza_attivita"
        android:text=""
        android:inputType="date"/>

</RelativeLayout>