<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/dialogToDoChiudi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/indietro"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@android:color/white"/>

            <TextView
                android:id="@+id/textAttivita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/dialogToDoChiudi"
                android:ellipsize="end"
                android:text="@string/inserimentoAttivita"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dialogToDoButtonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/conferma"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <RadioGroup
            android:id="@+id/dialogToDoPrioritaGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogToDoNome"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoNome">

            <RadioButton
                android:id="@+id/bassaPriorita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/bassa" />

            <RadioButton
                android:id="@+id/mediaPrioria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <RadioButton
                android:id="@+id/altaPriorita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta" />
        </RadioGroup>

        <EditText
            android:id="@+id/dialogToDoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/nome_attivita"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/dialogToDoDescrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/descrizione_attivita"
            android:importantForAutofill="no"
            android:inputType="textLongMessage|text|textImeMultiLine"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoPrioritaGroup" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="48dp"
            android:text="@string/priorita_attivita"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoNome" />

        <TextView
            android:id="@+id/dataScelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:text="@string/scadenza_attivita"
            android:textColor="#4A4A4A"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoPrioritaGroup" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="32dp"
            android:text="@string/scadenza_attivita"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoPrioritaGroup" />

        <ImageButton
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="108dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Seleziona data"
            android:padding="8dp"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogToDoPrioritaGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>