<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textCorsoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCorsoNomeProfessore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textCorsoNomeProfessoreGenerico"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNome" />

    <TextView
        android:id="@+id/textCorsoNomeProfessoreGenerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_professore"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNome" />

    <TextView
        android:id="@+id/textCorsoEmailProfessoreGenerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/email_professore"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNomeProfessoreGenerico" />

    <TextView
        android:id="@+id/textCorsoEmailProfessore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textCorsoEmailProfessoreGenerico"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNomeProfessore" />

    <TextView
        android:id="@+id/textCorsoNumeroCFU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNome" />

    <TextView
        android:id="@+id/textCorsoAppunti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNome"
        tools:text="@string/appunti" />

    <TextView
        android:id="@+id/textCorsoNumeroCFUgenerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/numero_CFU"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/textCorsoNumeroCFU"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoNome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewCorsoSelezionato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorsoAppunti" />


</androidx.constraintlayout.widget.ConstraintLayout>